# MarkdownReader

./: .gitignore  MarkdownReaderDebug.spec  README.md  build.bat  package.py  pyproject.toml  requirements.txt  run.bat  setup_git.py  test.md
markdownreader/: __init__.py  __main__.py  app.py  editor.py  main.py  main_window.py  pdf_export.py  preview.py  renderer.py  search_bar.py  settings.py  sidebar.py  utils.py
