[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdownreader"
version = "0.2.0"
description = "A modern Markdown reader with live preview, dark/light themes, and PDF export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "PyQtWebEngine>=5.15",
    "Pygments>=2.17",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
markdownreader = "markdownreader.main:main"

[tool.hatch.build.targets.wheel]
packages = ["markdownreader"]
